# MusicalFFT

./: .gitignore  CMakeLists.txt  README.md
include/: ffthw.h  fftsw.h  midi.h  note_profile.h  opencl.h  opencl_context.h  opencl_mem.h  wav.h
kernels/: gather_notes.cl  musical_cepstrum.cl  musical_fft.cl  vector_add.cl
midi/: preprocessor.py
src/: ffthw.cpp  fftsw.cpp  midi.cpp  note_profile.cpp  opencl.cpp  opencl_context.cpp  wav.cpp
tests/: fft.cpp  fft_fixture.cpp  fft_fixture.h  opencl.cpp  opencl_fixture.cpp  opencl_fixture.h  wav.cpp
